# nerf_bridge

./: nsDroid_config.json  preprocess.ipynb  pyproject.toml
nsDroid/: droid_dataloader.py  droid_datamanager.py  droid_dataparser.py  droid_dataset.py  droid_trainer.py  method_configs.py
nsReplica/: Replica_dataloader.py  Replica_datamanager.py  Replica_dataparser.py  Replica_dataset.py  Replica_trainer.py  method_configs.py
nsros/: ros_dataloader.py
