[project]
name = "nsBridge"
version = "0.1"

dependencies = [
	"nerfstudio==0.3.3"
]

[tool.setuptools.packages.find]
include = ["nsros*", "nsReplica*"]

[tool.pyright]
extraPaths = ["nsros", "nsReplica"]

[project.entry-points.'nerfstudio.method_configs']
ros-nerfacto = 'nsros.method_configs:RosNerfacto'
ros-depth-nerfacto = 'nsros.method_configs:RosDepthNerfacto'
sim-nerfacto = 'nsReplica.method_configs:SimNerfacto'
sim-depth-nerfacto = 'nsReplica.method_configs:SimDepthNerfacto'

